<resources>
    <string name="app_name">EasyHotel</string>
    <string name="menu_search" />
    <string name="menu_refresh" />
    <string name="price_prompt" />
    <string name="rating_prompt" />
    <string name="amenities_prompt" />
    <string name="create_your_n_account">Create your account</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu</string>
    <string name="i_u_kho_n">Điều khoản</string>
    <string name="email">Email</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="ng_k_t_i_kho_n_m_i"><![CDATA[>Đăng ký tài khoản mới]]></string>
    <string name="register">register</string>
    <string name="check_in_date">Check in date</string>
    <string name="check_out_date">check out date</string>
    <string name="confirm">Confirm</string>
</resources>