<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Thanh lọc -->
    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Spinner
            android:id="@+id/price_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/price_options"
            android:prompt="@string/price_prompt" />

        <Spinner
            android:id="@+id/rating_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/rating_options"
            android:prompt="@string/rating_prompt" />

        <Spinner
            android:id="@+id/amenities_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/amenities_options"
            android:prompt="@string/amenities_prompt" />

    </LinearLayout>

    <!-- Danh sách phòng -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/room_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filter_layout" />

</RelativeLayout>
